<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PromptActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="88dp"
        android:layout_gravity="center"
        android:layout_margin="40dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">



                <TextView
                    android:id="@+id/hint_question_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_question"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>




                <Button
                    android:id="@+id/show_hint_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_show"
                    android:layout_gravity="center"/>



                <TextView
                    android:id="@+id/hint_answer_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:text="Odpowiedź"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/return_from_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_button"
                    android:layout_gravity="center"/>
    </LinearLayout>



    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>